--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "ovsdb-rust"
+name = "ovsdb"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://git.dubzland.net/holodekk/ovsdb-rust.git"
+license-file = "LICENSE"
 
 [dependencies]
 serde = { version = "1.0.189", features = ["derive"] }
@@ -11,8 +11,8 @@ serde_json = "1.0.107"
 serde_tuple = "0.5.0"
 thiserror = "1.0.50"
 uuid = { version = "1.5.0", features = ["v4", "serde"] }
-
-[[bin]]
-name = "ovsdbrs"
-path = "src/main.rs"
-doc = false
+convert_case = "0.6.0"
+quote = "1.0"
+proc-macro2 = "1.0"
+prettyplease = "0.2.16"
+syn = { version = "2", default-features = false, features = ["derive", "full", "parsing", "extra-traits"] }
