--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,17 @@ repository = "https://git.dubzland.net/holodekk/ovsdb-rust.git"
 license-file = "LICENSE"
 
 [dependencies]
-serde = { version = "1.0.189", features = ["derive"] }
-serde_json = "1.0.107"
-serde_tuple = "0.5.0"
-thiserror = "1.0.50"
-uuid = { version = "1.5.0", features = ["v4", "serde"] }
 convert_case = "0.6.0"
+futures = "0.3"
 quote = "1.0"
 proc-macro2 = "1.0"
 prettyplease = "0.2.16"
+serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.107"
+serde_tuple = "0.5.0"
 syn = { version = "2", default-features = false, features = ["derive", "full", "parsing", "extra-traits"] }
+thiserror = "1.0.50"
+tokio = { version = "1", features = ["io-util", "macros", "net", "rt",
+	"rt-multi-thread", "sync"] }
+tokio-util = { version = "0.7.4", features = ["codec"] }
+uuid = { version = "1.5.0", features = ["v4", "serde"] }
