--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ repository = "https://git.dubzland.net/holodekk/ovsdb-rust.git"
 license-file = "LICENSE"
 
 [dependencies]
+async-trait = "0.1.77"
 convert_case = "0.6.0"
 futures = "0.3"
 quote = "1.0"
