Update image in CI configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 image:
-  name: gitlab-registry.dubzland.net/holodekk/rust-docker-ci:1.76
+  name: docker.dubzland.com/holodekk/rust-docker-ci:1.76
 
 stages:
   - test
