--- a/ovsdb/Cargo.toml
+++ b/ovsdb/Cargo.toml
@@ -3,7 +3,7 @@ name = "ovsdb"
 description = """
 Rust implementation of the OVSDB schema and wire protocol.
 """
-documentation = "https://docs.rs/ovsdb/0.0.1"
+documentation = "https://docs.rs/ovsdb/0.0.3"
 edition = "2021"
 homepage = "https://git.dubzland.com/holodekk/ovsdb"
 authors = ["Josh Williams <jdubz@holodekk.io>"]
@@ -11,6 +11,7 @@ categories = ["network-programming", "database-interfaces"]
 version = "0.0.2"
 repository = "https://git.dubzland.com/holodekk/ovsdb.git"
 license = "MIT"
+readme = "../README.md"
 
 [dependencies]
 erased-serde = "0.4.3"
