--- a/ovsdb/Cargo.toml
+++ b/ovsdb/Cargo.toml
@@ -3,12 +3,12 @@ name = "ovsdb"
 description = """
 Rust implementation of the OVSDB schema and wire protocol.
 """
-documentation = "https://docs.rs/ovsdb/0.0.3"
+documentation = "https://docs.rs/ovsdb/0.0.4"
 edition = "2021"
 homepage = "https://git.dubzland.com/holodekk/ovsdb"
 authors = ["Josh Williams <jdubz@holodekk.io>"]
 categories = ["network-programming", "database-interfaces"]
-version = "0.0.3"
+version = "0.0.4"
 repository = "https://git.dubzland.com/holodekk/ovsdb.git"
 license = "MIT"
 readme = "../README.md"
@@ -32,3 +32,6 @@ uuid = { version = "1.5.0", features = ["v4", "serde"] }
 
 [features]
 client = []
+
+[package.metadata.docs.rs]
+all-features = true
