--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,5 +61,6 @@ release:
   stage: deploy
   script:
     - cargo publish -p ovsdb
+    - cargo publish -p ovsdb-build
   rules:
     - if: $CI_COMMIT_TAG
