--- a/ovsdb/Cargo.toml
+++ b/ovsdb/Cargo.toml
@@ -30,8 +30,12 @@ tokio = { version = "1", features = [
 tokio-util = { version = "0.7.4", features = ["codec"] }
 uuid = { version = "1.5.0", features = ["v4", "serde"] }
 
+[dev-dependencies]
+tokio-test = { version = "0.4.0" }
+
 [features]
 client = []
+default = ["client"]
 
 [package.metadata.docs.rs]
 all-features = true
